# SAPR-CAD

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Transp1DLaxWendroffMethod1DT.txt  Transp1DLaxWendroffMethod1D_XY.txt
Lit/: Lit.txt  archive (1).html  bashStatic.txt  listLit.txt
src/: main.cpp
src/body2D/include/: Body2D.h  rectangle2D.h
src/include/: CrankNicolsonMethod1D.h  FiniteDifferenceMethod1D.h  HeatTask1D.h  ImplicitMethod1D.h  LaxWendroffMethod1D.h  LinearMesh1D.h  Mesh1D.h  Method1D.h  RectangleMesh2D.h  Task.h  Task1D.h  TransportTask1D.h
src/mesh/: LinearMesh1D.cpp  RectangleMesh2D.cpp
src/mesh/include/: LinearMesh1D.h  Mesh1D.h  Mesh2D.h  RectangleMesh2D.h
src/methods/: FiniteDifferenceMethod1D.cpp  LaxWendroffMethod1D.cpp
src/methods/include/: CrankNicolsonMethod1D.h  FiniteDifferenceMethod1D.h  ImplicitMethod1D.h  LaxWendroffMethod1D.h  Method1D.h
src/tasks/: HeatTask1D.cpp  TransportTask1D.cpp
src/tasks/include/: HeatTask1D.h  LinearMesh1D.h  Task.h  Task1D.h  TransportTask1D.h
